--- a/styles.css
+++ b/styles.css
@@ -11,16 +11,19 @@ body {
 }
 
 h1 {
-    font-family: pokemonSolid;
+    font-family: pokemonSolid, Arial, Helvetica, sans-serif;
     color: #E53167;
     text-align: center;
     font: outline;
+    padding: 5px;
+    margin: 2px;
 }
 
-.wrapper {
+.header {
     font-family: Arial, Helvetica, sans-serif;
     color: yellow;
     text-align: center;
+    margin: 2px;
 }
 
 .search {
